                             in your chain (closes: #481244).
                           If a footer.txt file exists its content will be
                             appended to outgoing messages leaving the remailer
                             network at this hop (closes: #490117).
                           List known remailers in remailer-conf reply (closes:
                             #480330).
                           The files created with "SENDMAIL outfile" have
                             different names now to scale beyond 10k files
                             (closes: #587593).
                           Fixed the "is a mailfolder" checking for -f.
                           Various fixes for Mixmaster when not using ncurses.
                           Added new option --config to allow loading of
                             configuration information from an alternate file.
                           POOL is now used correctly if set in mix.cfg.
                           ASCII armor checksum is now verified on PGP keys.
                           Corrected a bug where 1/4096 of pgp messages was
                             destroyed due an improper armor checksum
                             interpretation.
                           Added password-based authenticated SMTP for mix.
                             Currently, only AUTH LOGIN is supported.
                           Mixmaster now handles <CR><LF> in pubring.mix.
                           Removed incorrect NT service checks in mix.c.
                           Mixmaster now keeps no stats in client mode.
                           The pool is autmatically checked for waiting
                             messages in the client configuration.
                           Mixmaster now bears a DFSG-compliant license.
                           Fixed permissions on tarball release.
                           Documentation updates.