@@ -6,7 +6,7 @@
    details.
 
    Mixmaster initialization, configuration
-   $Id: mix.c,v 1.11.2.4 2002/10/09 20:51:04 weaselp Exp $ */
+   $Id: mix.c,v 1.11.2.5 2002/10/09 21:40:56 weaselp Exp $ */
 
 
 #include "mix3.h"
@@ -134,6 +134,7 @@ int LISTSUPPORTED = 1;                /* list supported remailers in remailer-co
 long PACKETEXP = 7 * SECONDSPERDAY;	/* Expiration time for old packets */
 long IDEXP = 7 * SECONDSPERDAY;	/* 0 = no ID log !! */
 long SENDPOOLTIME = 60 * 60;	/* frequency for sending pool messages */
+long MAILINTIME = 5 * 60;	/* frequency for processing MAILIN mail */
 
 char ERRLOG[LINELEN];
 char ADDRESS[LINELEN];
@@ -157,6 +158,7 @@ char PASSPHRASE[LINELEN] = COMPILEDPASS;
 #else /* end of COMPILEDPASS */
 char PASSPHRASE[LINELEN] = "";
 #endif /* else if not COMPILEDPASS */
+char MAILIN[PATHMAX] = "";
 char MAILBOX[PATHMAX] = "mbox";
 char MAILABUSE[PATHMAX];
 char MAILBLOCK[PATHMAX];
@@ -365,6 +367,7 @@ int mix_configline(char *line)
 	  read_conf_t(PACKETEXP) || read_conf_t(IDEXP) ||
 	read_conf_i(LISTSUPPORTED) ||
 	  read_conf_t(SENDPOOLTIME) || read_conf_i(NUMCOPIES) ||
+	  read_conf_t(MAILINTIME) ||
 	  read_conf(CHAIN) || read_conf_i(VERBOSE) ||
 	  read_conf_i(DISTANCE) || read_conf_i(MINREL) ||
 	  read_conf_i(RELFINAL) || read_conf_t(MAXLAT) ||
@@ -377,7 +380,7 @@ int mix_configline(char *line)
 	  read_conf(MAILBOX) || read_conf(MAILABUSE) ||
 	  read_conf(MAILBLOCK) || read_conf(MAILUSAGE) ||
 	  read_conf(MAILANON) || read_conf(MAILERROR) ||
-	  read_conf(MAILBOUNCE) ||
+	  read_conf(MAILBOUNCE) || read_conf(MAILIN) ||
 
 	  read_conf(DISCLAIMFILE) || read_conf(FROMDSCLFILE) ||
 	  read_conf(POP3CONF) || read_conf(HELPFILE) ||
@@ -651,7 +654,7 @@ void mix_exit(void)
 int mix_regular(int force)
 {
   FILE *f;
-  long now, tpool = 0, tpop3 = 0, tdaily = 0;
+  long now, tpool = 0, tpop3 = 0, tdaily = 0, tmailin = 0;
   int ret = 0;
 
   mix_init(NULL);
@@ -660,31 +663,35 @@ int mix_regular(int force)
   f = mix_openfile(REGULAR, "r+");
   if (f != NULL) {
     lock(f);
-    fscanf(f, "%ld %ld %ld", &tpool, &tpop3, &tdaily);
+    fscanf(f, "%ld %ld %ld %ld", &tpool, &tpop3, &tdaily, &tmailin);
     if (now - tpool >= SENDPOOLTIME)
-      force |= FORCE_POOL;
+      force |= FORCE_POOL | FORCE_MAILIN;
 #ifdef USE_SOCK
     if (now - tpop3 >= POP3TIME)
-      force |= FORCE_POP3;
+      force |= FORCE_POP3 | FORCE_MAILIN;
 #endif /* USE_SOCK */
     if (now - tdaily >= SECONDSPERDAY)
       force |= FORCE_DAILY;
+    if (now - tmailin >= MAILINTIME)
+      force |= FORCE_MAILIN;
     if (force & FORCE_POOL)
       tpool = now;
     if (force & FORCE_POP3)
       tpop3 = now;
     if (force & FORCE_DAILY)
       tdaily = now;
+    if (force & FORCE_MAILIN)
+      tmailin = now;
     rewind(f);
-    fprintf(f, "%ld %ld %ld\n", tpool, tpop3, tdaily);
+    fprintf(f, "%ld %ld %ld %ld\n", tpool, tpop3, tdaily, tmailin);
     unlock(f);
     fclose(f);
   } else {
-    force = FORCE_POOL | FORCE_POP3 | FORCE_DAILY;
+    force = FORCE_POOL | FORCE_POP3 | FORCE_DAILY | FORCE_MAILIN;
     f = mix_openfile(REGULAR, "w+");
     if (f != NULL) {
       lock(f);
-      fprintf(f, "%ld %ld %ld\n", now, now, now);
+      fprintf(f, "%ld %ld %ld %ld\n", now, now, now, now);
       unlock(f);
       fclose(f);
     } else
@@ -697,6 +704,8 @@ int mix_regular(int force)
   if (force & FORCE_POP3)
     pop3get();
 #endif /* USE_SOCK */
+  if (force & FORCE_MAILIN)
+    ret = process_mailin();
   if (force & FORCE_POOL)
     ret = pool_send();
 
@@ -752,6 +761,8 @@ int mix_daemon(void)
 {
   long t;
   t = SENDPOOLTIME;
+  if (MAILINTIME < t && (MAILIN != NULL && (strcmp(MAILIN, "") != 0)))
+    t = MAILINTIME;
 #ifdef USE_SOCK
   if (POP3TIME < t)
     t = POP3TIME;
