@@ -845,8 +845,10 @@ int mix_send(void);
 #define FORCE_POOL 1
 #define FORCE_POP3 2
 #define FORCE_DAILY 4
+#define FORCE_MAILIN 8
 int mix_regular(int force);
 int mix_daemon(void);
+int process_mailin(void);
 
 #ifdef USE_PGP
 
