@@ -1,5 +1,5 @@
 .TH MIX 1 "Mixmaster Version 3.0 beta"
-.\" $Id: mix.1,v 1.6.2.2 2002/10/04 23:49:15 rabbi Exp $
+.\" $Id: mix.1,v 1.6.2.3 2002/10/09 21:40:55 weaselp Exp $
 .SH NAME
 mix \- anonymous remailer software
 .SH SYNOPSIS
@@ -415,6 +415,16 @@ errors. Default:
 Mail folder for bounce messages. Default:
 .IR MAILBOX .
 .TP
+.B MAILIN
+If defined an additional mail folder where Mixmaster should read messages from
+when processing its pool. If it ends with a
+.B /
+it is treated as a Maildir, otherwise a standard mbox format file
+is expected. All messages are removed from the folder after reading.
+.B MAILIN
+is not set by default.
+It is an incredible bad idea to set this the same as \fBMAILBOX\fP.
+.TP
 .B VERBOSE
 If
 .B VERBOSE
@@ -585,6 +595,19 @@ listed in
 for new mail.
 Default:
 .BR 1h .
+.TP
+.B MAILINTIME
+How often Mixmaster should read mail from
+.BR MAILIN
+and process mails fetched via POP3. Processing here means to
+answer remailer-xxx requests and decrypt messages to the Mixmaster
+and place them in the pool. No other processing of the pool is
+done. This action is always performed sending out messages from the pool (at
+.BR SENDPOOLTIME
+intervals) or receiving mail via POP3 (at
+.BR POP3TIME
+intervals). Default:
+.BR 5m .
 .TP
 .B PACKETEXP
 How long to store parts of incomplete multipart messages and other
