@@ -270,3 +270,9 @@
                            Mixmaster now bears a DFSG-compliant license.
                            Fixed permissions on tarball release.
                            Documentation updates.
+
+2002-??-??      2.????     New option MAILIN that can be set to either a mbox
+                             or Maildir folder. New mail will be read from it
+                             and the folder cleared every time Mixmaster
+                             processes its pool, or at MAILINTIME intervals
+                             (closes: #597043).
